--- a/src/Sandbox/client/src/components/directives/fm-footer-directive/fm-footer-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-footer-directive/fm-footer-view.html
@@ -1,25 +1,4 @@
-﻿<!--<section class="fm-footer section-padding">
-  <h2 class="text-center fm-form-title">Kontakta oss</h2>
-  <div class="container">
-    <div class="row">
-      <form class="fm-contact-form col-md-10 col-md-offset-1" action="" method="">
-        <div class="form-input-group">
-          <input type="text" class="form-control" name="name" placeholder="Namn">
-        </div>
-        <div class="form-input-group">
-          <input type="email" class="form-control" name="email" placeholder="E-post">
-        </div>
-        <div class="form-group">
-          <textarea class="form-control" rows="5" name="message" placeholder="Hur kan vi hjälpa till?"></textarea>
-        </div>
-        <button type="submit" class="fm-button button-light">Skicka</button>
-      </form>
-    </div>
-  </div>
-</section>-->
-
-
-<section class="fm-footer">
+﻿<section class="fm-footer">
   <div class="container-fluid section-padding">
     <div class="row">
 
