--- a/src/Sandbox/client/src/components/directives/fm-hero-directive/fm-hero-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-hero-directive/fm-hero-style.scss
@@ -3,9 +3,11 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+  background-attachment: fixed;
   min-height: 100vh;
   background-color: $color-accent; 
   position: relative;
+
 
     &:before {
     content: " ";
