--- a/src/Sandbox/wwwroot/css/style.css
+++ b/src/Sandbox/wwwroot/css/style.css
@@ -8707,24 +8707,12 @@ p {
 .fm-fund-gallery {
   background-color: #F2F2F0; }
   .fm-fund-gallery .fm-fund-button-bar {
-    display: block;
-    width: 100%;
-    margin: 2.4rem auto; }
-    @media (min-width: 768px) {
-      .fm-fund-gallery .fm-fund-button-bar {
-        width: 75rem;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-align-items: center;
-        -ms-flex-align: center;
-        align-items: center; } }
+    margin: 2.4rem 15px; }
     .fm-fund-gallery .fm-fund-button-bar button {
-      margin: 0 auto 2.4rem auto;
-      width: 100%; }
-      @media (min-width: 768px) {
-        .fm-fund-gallery .fm-fund-button-bar button {
-          width: auto; } }
+      margin-right: 1.2rem;
+      padding: 1rem 2.4rem; }
+      .fm-fund-gallery .fm-fund-button-bar button.button-active {
+        background-color: #22968b; }
   .fm-fund-gallery .fm-fund-wrapper {
     margin-bottom: 4.8rem;
     transition: 900ms ease-in background-color; }
@@ -9155,21 +9143,54 @@ p {
 
 .fm-fund-menu-modal {
   background-color: rgba(0, 0, 0, 0.9); }
-  .fm-fund-menu-modal .fm-fund-menu-modal-links li {
-    margin-bottom: 2.4rem;
-    text-align: center; }
-    .fm-fund-menu-modal .fm-fund-menu-modal-links li a {
-      color: #FFF;
-      opacity: 0.5;
-      text-transform: uppercase;
-      transition: opacity 300ms ease-in;
-      font-size: 2.9rem; }
-      .fm-fund-menu-modal .fm-fund-menu-modal-links li a:hover {
-        opacity: 1;
-        transition: opacity 300ms ease-out; }
+  .fm-fund-menu-modal nav {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+    .fm-fund-menu-modal nav .fm-fund-menu-modal-links.links-open li {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      transition: all 300ms ease-out; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links.links-open li:nth-child(1) {
+        transition-delay: 300ms; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links.links-open li:nth-child(2) {
+        transition-delay: 200ms; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links.links-open li:nth-child(3) {
+        transition-delay: 100ms; }
+    .fm-fund-menu-modal nav .fm-fund-menu-modal-links li {
+      padding: 0;
+      text-align: center;
+      opacity: 0;
+      -webkit-transform: translate3d(0, -100vh, 0);
+      transform: translate3d(0, -100vh, 0);
+      transition: all 300ms ease-in;
+      margin: 20% 0; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links li:first-child {
+        margin-top: 0; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links li:last-child {
+        margin-bottom: 0; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links li:nth-child(1) {
+        transition-delay: 100ms; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links li:nth-child(2) {
+        transition-delay: 200ms; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links li:nth-child(3) {
+        transition-delay: 300ms; }
+      .fm-fund-menu-modal nav .fm-fund-menu-modal-links li a {
+        color: #FFF;
+        opacity: 0.5;
+        text-transform: uppercase;
+        transition: opacity 300ms ease-in;
+        font-size: 2.9rem; }
+        .fm-fund-menu-modal nav .fm-fund-menu-modal-links li a:hover {
+          opacity: 1;
+          transition: opacity 300ms ease-out; }
 
 .fm-fund-search-modal {
-  background-color: #2abbae; }
+  background-color: rgba(48, 68, 76, 0.95); }
   .fm-fund-search-modal #fm-logo {
     position: absolute;
     height: 150%;
