Refactored code in controllers

--- a/src/Sandbox/client/src/components/controllers/fm-home-controller/fm-home-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-home-controller/fm-home-view.html
@@ -1,10 +1,11 @@
 ﻿<fm-hero-image></fm-hero-image>
 
-<div class="container" ng-controller="FmHomeController">
+<div class="container">
   <div class="row">
     <div class="col-xs-12 section-padding">
-      <h2>{{home.title}}</h2>
-      <p>{{home.content}}</p>
+      <h2>{{fmHome.title}}</h2>
+      <p>{{fmHome.content}}</p>
+    </div>
   </div>
 </div>
 
