--- a/src/Sandbox/client/src/components/directives/fm-fund-gallery-directive/fm-fund-gallery-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-fund-gallery-directive/fm-fund-gallery-view.html
@@ -7,14 +7,20 @@
     </div>
   </div>
 
-  <!-- fm-card -->
-  <div ng-show="showCard" class="row">
+  <!-- button-row -->
+  <div class="row">
     <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-
       <div class="fm-fund-button-bar">
         <button ng-click="showCard = true; showTable = false;" class="fm-button button-accent button-active"><span class="glyphicon glyphicon-th"></span> Kortvy</button>
         <button ng-click="showTable = true; showCard = false;" class="fm-button button-accent"><span class="glyphicon glyphicon-list-alt"></span> Lista</button>
       </div>
+    </div>
+  </div>
+  <!-- button-row:end -->
+
+  <!-- fm-card -->
+  <div ng-show="showCard" class="row">
+    <div class="col-xs-12 col-lg-10 col-lg-offset-1">
 
       <article ng-repeat="fund in funds" class="col-xs-12 col-sm-6 col-lg-4 fm-fund-wrapper">
 
@@ -73,14 +79,10 @@
     </div>
   </div>
   <!-- fm-card:end -->
+
   <!-- fm-table -->
   <div ng-show="showTable" class="row">
     <div class="col-xs-12 col-lg-10 col-lg-offset-1">
-
-      <div class="fm-fund-button-bar" style="margin-left: 0; margin-right: 0;">
-        <button ng-click="showCard = true; showTable = false;" class="fm-button button-accent"><span class="glyphicon glyphicon-th"></span> Kortvy</button>
-        <button ng-click="showTable = true; showCard = false;" class="fm-button button-accent button-active"><span class="glyphicon glyphicon-list-alt"></span> Lista</button>
-      </div>
 
       <table class="fm-table">
 
