--- a/src/Sandbox/wwwroot/views/fm-market-view.html
+++ b/src/Sandbox/wwwroot/views/fm-market-view.html
@@ -1,8 +1,8 @@
-<!--<div class="container-fluid section-padding background-dark" ng-controller="FmMarketController">
+<!--<div class="container-fluid section-padding background-dark">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h2 class="text-center">{{market.title}}</h2>
-      <p class="text-center">{{market.content}}</p>
+      <h2 class="text-center">{{fmMarket.title}}</h2>
+      <p class="text-center">{{fmMarket.content}}</p>
     </div>
   </div>
 </div>-->
