--- a/src/Sandbox/wwwroot/views/fm-market-overview-view.html
+++ b/src/Sandbox/wwwroot/views/fm-market-overview-view.html
@@ -2,8 +2,8 @@
 
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h2 class="fm-market-overview-title">{{title}}</h2>
-      <p class="fm-market-overview-subtitle">{{subtitle}}</p>
+      <h2 class="fm-market-overview-title">Marknadsöversikt</h2>
+      <p class="fm-market-overview-subtitle">Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal.</p>
     </div>
   </div>
 
