--- a/src/Sandbox/wwwroot/views/fm-market-view.html
+++ b/src/Sandbox/wwwroot/views/fm-market-view.html
@@ -7,9 +7,9 @@
   </div>
 </div>-->
 
-<fm-market-overview></fm-market-overview>
+<fm-market-overview funds="fmMarket.funds"></fm-market-overview>
 <fm-bulletin-slider></fm-bulletin-slider>
-<fm-newsfeed></fm-newsfeed>
+<fm-newsfeed news="fmMarket.news"></fm-newsfeed>
 
 
 
